<resources>
    <string name="dummy_message">This is some dummy message</string>
    <string name="app_name">CMsg App</string>
    <string name="deliver">DELIVERED</string>
    <string name="profile_label">User Profile</string>
    <string name="apply_label">Apply</string>
    <string name="receiver_name_label">Receiver Name</string>
    <string name="receiver_number_label">Receiver Number</string>
    <string name="receiver_msg_label">Receiver Message</string>
    <string name="msg_label">Message</string>
    <string name="message_parameters">Message Parameters</string>
    <string name="error_label">Error</string>
    <string name="network_connection_error">No internet connection</string>
    <string name="otp_trigger_error">Cannot trigger OTP to this Email ID</string>
    <string name="otp_verification_error">OTP not verified</string>
    <string name="cannot_send_sms">SMS Error by service provider</string>
    <string name="sent_but_undelivered">SMS sent by cannot deliver</string>
    <string name="failure_reason_relevant_providers">No relevant service provider</string>
    <string name="refuse">REFUSED</string>
    <string name="tx_registered">Transaction Saved</string>
    <string name="settings_saved">Settings Saved</string>
    <string name="profile_updated">Profile updated</string>
    <string name="nothing_updated">Nothing updated</string>
    <string name="fail">FAILED</string>
    <string name="refusal_comment">Enter refusal comments</string>
    <string name="enter_note">Enter note</string>
    <string name="camera_label">Use Camera</string>
    <string name="gallery_label">Use Gallery</string>
    <string name="header_tasks_list">My Tasks</string>
    <string name="title_toolbar_task_list">Current Tasks</string>
    <string name="header_return_tasks_list">Return Tasks</string>
    <string name="header_order_detail">Order Details</string>
    <string name="order_number_label">Order Number : </string>
    <string name="order_number_label2">Order Number</string>
    <string name="expected_delivery">Expected Delivery</string>
    <string name="end_date_label">End Date</string>
    <string name="return_date">Return Date</string>
    <string name="place_holder_task_id">Task Id</string>
    <string name="place_holder_task_status">Delivered</string>
    <string name="title_activity_bottom_navigation">bottom_navigation</string>
    <string name="title_home">Home</string>
    <string name="return_tasks">Return tasks</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="to_stanbic_bank">To Stanbic Bank</string>
    <string name="title_notifications">Notifications</string>
    <string name="payment_reg">Payment Registration</string>
    <string name="transaction_reg">Transaction Registration</string>
    <string name="transaction_history">Transaction History</string>
    <string name="btm_nav_title_call">Call</string>
    <string name="btm_nav_title_chat">Chat</string>
    <string name="btm_nav_title_more">More</string>
    <string name="title_activity_side_drawer">SideDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="place_holder_address">Address</string>
    <string name="no_pending_message_label">No Pending Messages</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="banner_splash_activity">Welcome to CMsg App</string>
    <string name="banner_footer_splash_activity">Stable \u2022 Secure \u2022 Speedy</string>
    <string name="login_title">LAST-MILE DELIVERY ACROSS UGANDA</string>
    <string name="login_subtitle_stable">Stable</string>
    <string name="login_subtitle_dot">\u2022</string>
    <string name="login_subtitle_secure">Secure</string>
    <string name="login_subtitle_speedy">Speedy</string>
    <string name="login_newuser">New User?</string>
    <string name="login_signup">SignUp</string>
    <string name="login_btn">Login</string>
    <string name="login_member">Member Login</string>
    <string name="hint_login_username">Username</string>
    <string name="hint_login_password">Password</string>
    <string name="login_forgot_password">Forgot Password?</string>
    <string name="title_more">Total Amount</string>
    <string name="OrderDetail">Order Details</string>
    <string name="ShippingDetails">SHIPPING DETAILS</string>
    <string name="failReason">Failure Reason</string>
    <string name="createSignature">Drop Order</string>
    <string name="banner_network_unavailable">No network coverage</string>
    <string name="isLoggedIn">isLoggedIn</string>
    <string name="apiAuthToken">apiAuthToken</string>
    <string name="user_name">John Doe</string>
    <string name="user_email">johndoe@abc.com</string>
    <string name="ERROR_USER_NAME">Please enter the user name.</string>
    <string name="ERROR_PASSWORD">Please enter the password.</string>
    <string name="ERROR_AUTH_FAILED">Authentication failed, Please try again</string>
    <string name="ERROR_RE_LOGIN_FAILED">Authentication failed, Please login again</string>
    <string name="CONFIRM_APP_CLOSE">Are you sure you want to exit?</string>
    <string name="CONFIRM_LOG_OUT">Are you sure you want to logout?</string>
    <string name="back_exit_confirmation">Press back again to exit </string>
    <string name="ACTION_YES">Yes</string>
    <string name="ACTION_NO">No</string>
    <string name="ACTION_OK">OK</string>
    <string name="ACTION_CANCEL">Cancel</string>
    <string name="FORCE_UPDATE">Your application update is available</string>
    <string name="UNSTABLE_STATE">Something went wrong, application will be closed!!</string>
    <string name="UPDATE_AVAILABLE">There is newer version of this application available, click OK to upgrade now</string>
    <string name="task_update_confirm">Do you want to %1$s the task?</string>
    <string name="label_app_version">APP VERSION:</string>
    <string name="label_api_version">API VERSION:</string>
    <string name="sync_failed">SYNCHRONIZING DATA FAILED</string>
    <string name="apiCallFailed">Sync failed</string>
    <string name="RETRIEVE_ERROR">Error : Could not retrieve data</string>
    <string name="UPDATE_ERROR">Error : Could not update data</string>
    <string name="change_password_title">Change Password</string>
    <string name="otp_valid_label">OTP will expire in</string>
    <string name="failed_label">Failure</string>
    <string name="ERROR_EMPTY_CURRENT_PASSWORD">Please enter current password</string>
    <string name="ERROR_EMPTY_NEW_PASSWORD">Please enter new password</string>
    <string name="ERROR_EMPTY_RETYPE_NEW_PASSWORD">Please retype new password</string>
    <string name="ERROR_MISMATCH_RETYPE_NEW_PASSWORD">New password mismatch</string>
    <string name="ERROR_MISMATCH_CURRENT_PASSWORD">Current password incorrect</string>
    <string name="ERROR_PASSWORD_LENGTH">Minimum 5 characters password required</string>
    <string name="ERROR_PASSWORD_CHANGE_FAILED">Failed to update password</string>
    <string name="PASSWORD_CHANGE_SUCCESS">Password changed successfully</string>
    <string name="title_activity_maps">Map</string>
    <string name="zeroAmount">0.00</string>
    <string name="Quanity">Qty: %1$s</string>
    <string name="selectFailureReason">Select failure reason</string>
    <string name="reason_label">Reason</string>
    <string name="failureComment">Enter failure comments</string>
    <string name="sucessfulUpdation">Order updated successfully</string>
    <string name="unsucessfulUpdate">Order update failed</string>
    <string name="errorMessageForfail">Select failure reason</string>
    <string name="InsufficientRetry">Max. retries already attempted.</string>
    <string name="NoInternetConnect">No Internet Connection</string>
    <string name="select_all_label">Select All</string>
    <string name="select_all">All</string>
    <string name="today_label">Today</string>
    <string name="yesterday_label">Yesterday</string>
    <string name="older_label">Older</string>
    <string name="pending_messages_label">Pending Messages</string>
    <string name="nav_item_call_operator">Call operator</string>
    <string-array name="message_filter">
        <item>@string/select_all</item>
        <item>@string/today_label</item>
        <item>@string/yesterday_label</item>
        <item>@string/older_label</item>
    </string-array>
    <string-array name="failureReasons">
        <item>Select failure reason</item>
        <item>Postponment</item>
        <item>Absence</item>
        <item>Other</item>
    </string-array>
    <string-array name="taskSummaryValues">
        <item>Today</item>
        <item>3 Days</item>
        <item>1 Week</item>
        <item>1 Month</item>
    </string-array>
    <string name="RefusalCommentError">Please enter refusal comments</string>
    <string name="amount_paid_error">Please enter amount paid</string>
    <string name="amount_error">Please enter amount</string>
    <string name="invalid_amount_error">Please enter valid amount without decimal</string>
    <string name="no_receipt_error">Please upload receipt</string>
    <string name="receipt_uploaded">Receipt uploaded successfully</string>
    <string name="no_payment_notes_error">Please enter notes</string>
    <string name="CodError">Enter COD amount received</string>
    <string name="customer_unreachable">Customer unreachable</string>
    <string name="CodComparisonError">COD received cannot be greater than expected COD amount</string>
    <string name="totalAmount">Total Amount:</string>
    <string name="cod_amount">COD Amount(UGX)</string>
    <string name="total_amount">Total Amount(UGX)</string>
    <string name="move_to_map">Move to map</string>
    <string name="price_details">PRICE DETAILS</string>
    <string name="retry_date">Retry Date</string>
    <string name="retry_time">Retry Time</string>
    <string name="enter_failure_comments">Enter failure comments</string>
    <string name="submit">SUBMIT</string>
    <string name="complete">COMPLETE</string>
    <string name="returned">RETURN</string>
    <string name="task_returned_success">Task Returned Successfully</string>
    <string name="amount">Cash Received</string>
    <string name="amount_paid_label">Amount Paid</string>
    <string name="paid_to_label">Paid To</string>
    <string name="upload_image_label">Upload an image</string>
    <string name="continueBtn">CONTINUE</string>
    <string name="clear">CLEAR</string>
    <string name="postponmentErrorMessage">Select next retry date</string>
    <string name="mm_text">MM Received</string>
    <string name="signature_validation">Please enter signature</string>
    <string name="add_signature">Add signature<font color='#FFFFFF'>*</font></string>
    <string name="OK">OK</string>
    <string name="hint_login">User Name or Mobile No</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="old_password">Old Password</string>
    <string name="change_password">Change Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="confirm">Confirm</string>
    <string name="back">Back</string>
</resources>