<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout_login_activity_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/action_bar_top_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:navigationIcon="@drawable/nav_icon_back"
        app:title="@string/change_password_title"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintBottom_toTopOf="@+id/input_old_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Medium" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_old_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginStart="12dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action_bar_top_reset_password"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/green">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_old_password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/be_edit_text_reset_password"
            android:ems="10"
            android:fontFamily="@font/dmsansregular"
            android:hint="@string/old_password"
            android:inputType="textNoSuggestions|textPassword"
            android:maxLength="100"
            android:paddingStart="8dp"
            android:textColor="@color/green"
            android:textColorHint="#BEBEBE"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_new_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_old_password"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/green">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_new_password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/be_edit_text_reset_password"
            android:ems="10"
            android:fontFamily="@font/dmsansregular"
            android:hint="@string/new_password"
            android:inputType="textNoSuggestions|textPassword"
            android:maxLength="100"
            android:paddingStart="8dp"
            android:textColor="@color/green"
            android:textColorHint="#BEBEBE"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_reset_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_new_password"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/green">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_reset_confirm_password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/be_edit_text_reset_password"
            android:ems="10"
            android:fontFamily="@font/dmsansregular"
            android:hint="@string/confirm_password"
            android:inputType="textNoSuggestions|textPassword"
            android:maxLength="100"
            android:paddingStart="8dp"
            android:textColor="@color/green"
            android:textColorHint="#BEBEBE"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_change_pwd"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/bg_btn_login"
        android:fontFamily="@font/dmsansregular"
        android:text="@string/change_password"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_reset_confirm_password"
        app:layout_constraintVertical_bias="0.592" />


</androidx.constraintlayout.widget.ConstraintLayout>