<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout_login_activity_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bglogin"
    tools:context=".views.login.LoginActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/bg_btn_login"
                android:fontFamily="@font/dmsansregular"
                android:text="@string/login_btn"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.592" />

            <TextView
                android:id="@+id/text_forgot_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="12dp"
                android:fontFamily="@font/dmsansregular"
                android:gravity="center"
                android:text="@string/login_forgot_password"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/btn_login"
                app:layout_constraintStart_toStartOf="@+id/btn_login"
                app:layout_constraintTop_toBottomOf="@+id/btn_login" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_login_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="15dp"
                android:drawableStart="@drawable/icon_mail"
                app:hintEnabled="false"
                app:layout_constraintBottom_toTopOf="@+id/btn_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="#FFFFFF">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_login_password_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_shape"
                    android:backgroundTint="#FFFFFF"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/hint_login_password"
                    android:inputType="textNoSuggestions|textPassword"
                    android:maxLength="100"
                    android:paddingStart="8dp"
                    android:textColor="@color/black"
                    android:textColorHint="#C5BABA"
                    android:fontFamily="@font/dmsansregular"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/input_login_userid"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edittext_shape"
                android:backgroundTint="#FFFFFF"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:ems="10"
                android:fontFamily="@font/dmsansregular"
                android:hint="@string/hint_login"
                android:inputType="textPersonName"
                android:maxLength="50"
                android:paddingStart="8dp"
                android:textColor="@color/black"
                android:textColorHint="#C5BABA"
                android:textColorLink="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/input_login_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="driver1_roberttwinamatsiko2" />

            <TextView
                android:id="@+id/text_login_member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/dmsansbold"
                android:text="@string/login"
                android:textColor="#FFFFFF"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/input_login_userid"
                app:layout_constraintEnd_toEndOf="@+id/input_login_userid"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="@+id/input_login_userid" />

            <ProgressBar
                android:id="@+id/progressBar_login_activity"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:foregroundTint="#FFFFFF"
                android:indeterminate="true"
                android:indeterminateTint="#FFFFFF"
                android:progressTint="#FFFFFF"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/text_login_member"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
